objects/ASI_DFPM_Promotional_Project__c.object
<CustomObject>
    <fields>
        <fullName>ASI_DFPM_Brand__c</fullName>
        <label>Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s</fullName>
                </value>
                <value>
                    <fullName>Beefeater</fullName>
                </value>
                <value>
                    <fullName>Chateau Lafite</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal</fullName>
                </value>
                <value>
                    <fullName>Royal Salute</fullName>
                </value>
                <value>
                    <fullName>John Jameson</fullName>
                </value>
                <value>
                    <fullName>Kahlua</fullName>
                </value>
                <value>
                    <fullName>Malibu</fullName>
                </value>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12/13</fullName>
                </value>
                <value>
                    <fullName>FY13/14</fullName>
                </value>
                <value>
                    <fullName>FY14/15</fullName>
                </value>
                <value>
                    <fullName>FY15/16</fullName>
                </value>
                <value>
                    <fullName>FY16/17</fullName>
                </value>
                <value>
                    <fullName>FY17/18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Location__c</fullName>
        <label>Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Percentage_Completed__c</fullName>
        <formula>IF( ISNULL( ASI_DFPM_Total_Task__c ) || ASI_DFPM_Total_Task__c == 0, 0, ASI_DFPM_Total_Complete_Task__c  / ASI_DFPM_Total_Task__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NPD</fullName>
                </value>
                <value>
                    <fullName>Plug-in Promotion</fullName>
                </value>
                <value>
                    <fullName>Brand Promotion</fullName>
                </value>
                <value>
                    <fullName>On-shelf Promotion</fullName>
                </value>
                <value>
                    <fullName>GWP</fullName>
                </value>
                <value>
                    <fullName>Repacking</fullName>
                </value>
                <value>
                    <fullName>Merchandising Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Total_Complete_Milestone__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Complete Milestone</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Total_Complete_Task__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Complete Task</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Total_Milestone__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Milestone</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Total_Overdue_Task__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Overdue Task</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_DFPM_Total_Task__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Task</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Promotional Project</label>
    <listViews>
        <fullName>ASI_DFPM_All_Project_Templates</fullName>
        <columns>NAME</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Duration__c</columns>
        <columns>ASI_DFPM_Project_Type__c</columns>
        <columns>ASI_DFPM_Brand__c</columns>
        <columns>ASI_DFPM_Location__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_DFPM_Promotional_Project__c.ASI_DFPM_Template</value>
        </filters>
        <label>All Project Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_DFPM_All_Projects</fullName>
        <columns>NAME</columns>
        <columns>ASI_DFPM_Fiscal_Year__c</columns>
        <columns>ASI_DFPM_Percentage_Completed__c</columns>
        <columns>ASI_DFPM_Start_Date__c</columns>
        <columns>ASI_DFPM_End_Date__c</columns>
        <columns>ASI_DFPM_Duration__c</columns>
        <columns>ASI_DFPM_Status__c</columns>
        <columns>ASI_DFPM_Project_Type__c</columns>
        <columns>ASI_DFPM_Brand__c</columns>
        <columns>ASI_DFPM_Location__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>ASI_DFPM_Promotional_Project__c.ASI_DFPM_Template</value>
        </filters>
        <label>All Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotional Projects</pluralLabel>
    <recordTypes>
        <fullName>ASI_DFPM_Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_DFPM_Template</fullName>
        <active>true</active>
        <label>Template</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_DFPM_CannotBeCompleteWithOpenTasks</fullName>
        <active>true</active>
        <errorConditionFormula>if( and( ISPICKVAL( ASI_DFPM_Status__c , &quot;Completed&quot;) ,  ASI_DFPM_Total_Task__c  &gt; ASI_DFPM_Total_Complete_Task__c), true, false)</errorConditionFormula>
        <errorMessage>You cannot mark a project as complete if it still has open tasks.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_DFPM_StartDate_before_EndDate</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL( ASI_DFPM_Start_Date__c )) &amp;&amp; NOT(ISNULL( ASI_DFPM_End_Date__c )) &amp;&amp; ASI_DFPM_End_Date__c &lt; ASI_DFPM_Start_Date__c</errorConditionFormula>
        <errorMessage>Start date must be less or equal than the end date</errorMessage>
    </validationRules>
</CustomObject>